# mars

./: Cargo.toml  lib.rs  notes.txt
alloc/: Cargo.toml  alloc.rs  arena.rs  erased.rs  temp.rs
alloc/src/: boxed.rs  global.rs  lib.rs  tempallocator.rs  temporary.rs  vec.rs  vec_std_tests.rs
arg/: Cargo.toml  arg.rs
arg/examples/: arg.rs  no_main.rs
arg/src/: lib.rs
bitbuf/: Cargo.toml  bitbuf.rs  bitbuf_tests.rs
bitbuf/benches/: ubit64.rs  varint.rs
bitbuf/src/: bitreader.rs  bitwriter.rs  lib.rs
bitbuf/tests/: bitreader.rs  bitwriter.rs  varint.rs
charsor/: Cargo.toml
containers/: Cargo.toml  array.rs  arraymemory.rs  arraystring.rs  arrayvec.rs  bitarray.rs  boxed.rs  bytestring.rs  containers.rs  cstring.rs  handlearray.rs  memory.rs  sortedarray.rs  sortedvector.rs  string.rs  string_stdtests.rs  testutil.rs  unmanagedarray.rs  vec.rs  vec_stdtests.rs  vector.rs
containers/benches/: sortedarray.rs  sortedvector.rs
crates/dungers_bitbuf/: Cargo.toml
crates/dungers_bitbuf/src/: bitreader.rs  bitwriter.rs  error.rs
crates/dungers_bitbuf/tests/: bitwriter.rs
crates/dungers_genvec/src/: lib.rs
crates/dungers_ntree/: Cargo.toml
crates/dungers_ntree/src/: lib.rs
crates/dungers_oneshot/: Cargo.toml
crates/dungers_oneshot/src/: lib.rs
crates/dungers_rangealloc/: Cargo.toml
crates/dungers_rangealloc/src/: lib.rs
crates/dungers_varint/: Cargo.toml
dropguard/: Cargo.toml  dropguard.rs
flag/: Cargo.toml  flag.rs
flag/examples/: flag.rs
flag/src/: lib.rs
fxhash/: Cargo.toml
fxhash/src/: lib.rs
genvec/: Cargo.toml
genvec/src/: lib.rs
hash/: Cargo.toml  fxhash.rs  hash.rs  nohash.rs
nohash/: Cargo.toml
nohash/src/: lib.rs
rangealloc/: Cargo.toml  rangealloc.rs
rangealloc/src/: lib.rs
scopeguard/: Cargo.toml  scopeguard.rs
scopeguard/src/: lib.rs
src/: lib.rs
str/: Cargo.toml  arraystring.rs  str.rs  string.rs  string_stdtests.rs
str/src/: bytestr.rs  bytestring.rs  formatter.rs  lib.rs  string.rs
tempalloc/: Cargo.toml  tempalloc.rs
tempalloc/src/: lib.rs
varint/: Cargo.toml  varint.rs  varint_tests.rs
varint/benches/: main.rs
varint/src/: lib.rs
varint/tests/: tests.rs
vec/: Cargo.toml  vec.rs  vec_stdtests.rs
vec/src/: lib.rs
