[workspace]
resolver = "2"
members = [
  "alloc",
  "arg",
  "bitbuf",
  "containers",
  "flag",
  "fxhash",
  "genvec",
  "nohash",
  "rangealloc",
  "scopeguard",
  "varint",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
allocator-api2 = { version = "0.3.1" }
criterion = { version = "0.5.1", features = ["html_reports"] }
criterion-cycles-per-byte = { version = "0.6.1" }
either = { version = "1.15.0" }
# workspace
alloc = { path = "alloc" }
arg = { path = "arg" }
bitbuf = { path = "bitbuf" }
containers = { path = "containers" }
flag = { path = "flag" }
fxhash = { path = "fxhash" }
genvec = { path = "genvec" }
nohash = { path = "nohash" }
rangealloc = { path = "rangealloc" }
scopeguard = { path = "scopeguard" }
varint = { path = "varint" }

# workspace above
# ----
# root package below

[package]
name = "mars"
version = "0.0.0"
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
alloc = { workspace = true, optional = true }
arg = { workspace = true, optional = true }
bitbuf = { workspace = true, optional = true }
containers = { workspace = true, optional = true }
either = { workspace = true, optional = true }
flag = { workspace = true, optional = true }
fxhash = { workspace = true, optional = true }
genvec = { workspace = true, optional = true }
nohash = { workspace = true, optional = true }
rangealloc = { workspace = true, optional = true }
scopeguard = { workspace = true, optional = true }
varint = { workspace = true, optional = true }

[features]
alloc = ["dep:alloc"]
arg = ["dep:arg"]
bitbuf = ["dep:bitbuf"]
containers = ["dep:containers", "alloc"]
either = ["dep:either"]
flag = ["dep:flag"]
fxhash = ["dep:fxhash"]
genvec = ["dep:genvec"]
nohash = ["dep:nohash"]
rangealloc = ["dep:rangealloc"]
scopeguard = ["dep:scopeguard"]
varint = ["dep:varint", "bitbuf?/varint"]
