[workspace]
resolver = "2"
members = [
  "alloc",
  "arg",
  "bitbuf",
  "containers",
  "flag",
  "hash",
  "rangealloc",
  "scopeguard",
  "varint",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
allocator-api2 = { version = "0.2.9" }
criterion = { version = "0.5.1", features = ["html_reports"] }
criterion-cycles-per-byte = { version = "0.6.1" }
# workspace
alloc = { path = "alloc" }
arg = { path = "arg" }
bitbuf = { path = "bitbuf" }
containers = { path = "containers" }
flag = { path = "flag" }
hash = { path = "hash" }
rangealloc = { path = "rangealloc" }
scopeguard = { path = "scopeguard" }
varint = { path = "varint" }

# workspace above
# ----
# root package below

[package]
name = "mars"
version = "0.0.0"
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
alloc = { workspace = true, optional = true }
arg = { workspace = true, optional = true }
bitbuf = { workspace = true, optional = true }
containers = { workspace = true, optional = true }
flag = { workspace = true, optional = true }
hash = { workspace = true, optional = true }
rangealloc = { workspace = true, optional = true }
scopeguard = { workspace = true, optional = true }
varint = { workspace = true, optional = true }

[features]
alloc = ["dep:alloc"]
arg = ["dep:arg"]
bitbuf = ["dep:bitbuf"]
containers = ["dep:containers", "alloc"]
flag = ["dep:flag"]
hash = ["dep:hash"]
rangealloc = ["dep:rangealloc"]
scopeguard = ["dep:scopeguard"]
varint = ["dep:varint", "bitbuf?/varint"]
