[workspace]
resolver = "2"
members = [
  "alloc",
  "arg",
  "bitbuf",
  "containers",
  "flag",
  "hash",
  "rangealloc",
  "dropguard",
  "varint",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
allocator-api2 = { version = "0.2.9" }
criterion = { version = "0.5.1", features = ["html_reports"] }
criterion-cycles-per-byte = { version = "0.6.1" }
# workspace
alloc = { path = "alloc" }
arg = { path = "arg" }
bitbuf = { path = "bitbuf" }
containers = { path = "containers" }
flag = { path = "flag" }
hash = { path = "hash" }
rangealloc = { path = "rangealloc" }
dropguard = { path = "dropguard" }
varint = { path = "varint" }

# workspace above
# ----
# root package below

[package]
name = "mars"
version = "0.0.0"
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
alloc = { workspace = true }
arg = { workspace = true }
bitbuf = { workspace = true }
containers = { workspace = true }
flag = { workspace = true }
hash = { workspace = true }
rangealloc = { workspace = true }
dropguard = { workspace = true }
varint = { workspace = true }
