[package]
name = "bitbuf"
version = "0.0.0"
edition.workspace = true

[dependencies]
varint = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
criterion-cycles-per-byte.workspace = true

[features]
varint = ["dep:varint"]

[[test]]
name = "varint"
required-features = ["varint"]

[[bench]]
name = "ubit64"
harness = false

[[bench]]
name = "varint"
harness = false
required-features = ["varint"]
