[package]
name = "bitbuf"
version = "0.0.0"
edition.workspace = true

[lib]
path = "bitbuf.rs"

[dependencies]
varint = { workspace = true }

[dev-dependencies]
criterion.workspace = true
criterion-cycles-per-byte.workspace = true

[[bench]]
name = "ubit64"
harness = false

[[bench]]
name = "varint"
harness = false
