[package]
name = "containers"
version = "0.0.0"
edition.workspace = true

[lib]
path = "containers.rs"

[dependencies]
alloc = { workspace = true }
scopeguard = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_global_oom_handling)'] }

[[bench]]
name = "sortedvector"
harness = false
