[package]
name = "str"
version = "0.0.0"
edition.workspace = true

[lib]
path = "str.rs"

[dependencies]
alloc = { workspace = true }
vec = { workspace = true }

[dev-dependencies]
tempalloc = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_global_oom_handling)'] }
